--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: postgres
     volumes:
-      - ./postgresql_data:/var/lib/postgresql/data
+      - postgresql_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
