--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -6,45 +6,7 @@ info:
 servers:
 - url: "https://localhost:8080"
 paths:
-  /collectableService/transaction/createTransiction:
-    put:
-      description: ""
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              $ref: "#/components/schemas/TransactionsEntity"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "Error while creating transaction"
-  /collectableService/transaction/updateTransiction:
-    patch:
-      description: ""
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              $ref: "#/components/schemas/TransactionsEntity"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-              examples:
-                Example#1:
-                  value: "Error while updating status"
-  /collectableService/wallet/getWallet/{id}:
+  /collectableService/collectable/getCollectableById/{id}:
     get:
       description: ""
       parameters:
@@ -59,7 +21,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/WalletsEntity"
+                $ref: "#/components/schemas/CollectablesEntity"
         "400":
           description: "Bad Request"
           content:
@@ -68,96 +30,13 @@ paths:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Error while getting wallet"
+                  value: "Error while getting collectable"
                 Example#2:
-                  value: "Error while getting wallet"
+                  value: "Error while getting collectable"
                 Example#3:
-                  value: "Error while getting wallet"
-  /collectableService/wallet/topUpBalance/{id}/{amount}:
-    put:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "number"
-      - name: "amount"
-        in: "path"
-        required: true
-        schema:
-          type: "integer"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-              examples:
-                Example#1:
-                  value: "Error while changing balance id is null"
-  /collectableService/wallet/updateStatus/{id}:
-    put:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "number"
-      requestBody:
-        content:
-          text/plain:
-            schema:
-              type: "string"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-              examples:
-                Example#1:
-                  value: "Error while changing wallet status"
-                Example#2:
-                  value: "Error while changing wallet status"
-  /collectableService/wallet/withdrawBalance/{id}/{amount}:
-    put:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "number"
-      - name: "amount"
-        in: "path"
-        required: true
-        schema:
-          type: "integer"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-        "400":
-          description: "Bad Request"
-          content:
-            '*/*':
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "Error while withdraw balance adfartewr"
-                Example#2:
-                  value: "Error while withdraw balance id is null"
-  /financialService/transaction/createTransiction:
-    put:
+                  value: "Error while getting collectable"
+  /financialService/transaction/createTransaction:
+    post:
       description: ""
       requestBody:
         content:
@@ -175,7 +54,7 @@ paths:
               examples:
                 Example#1:
                   value: "Error while creating transaction"
-  /financialService/transaction/updateTransiction:
+  /financialService/transaction/updateStatus:
     patch:
       description: ""
       requestBody:
@@ -369,6 +248,26 @@ paths:
                 type: "string"
 components:
   schemas:
+    CollectablesEntity:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        name:
+          type: "string"
+        description:
+          type: "string"
+        category:
+          type: "string"
+        photoLink:
+          type: "string"
+        currentPrice:
+          type: "number"
+          format: "double"
+        availableShares:
+          type: "integer"
+          format: "int32"
     TransactionsEntity:
       type: "object"
       properties:
